--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -21,3 +21,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check code format
         run: cargo fmt --check
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check if code builds
+        run: cargo build --locked
+
